--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "16.4.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
+    "react-sticky": "6.0.3",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0"
   },
