--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-redux": "5.0.7",
+    "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
     "react-sticky": "6.0.3",
     "redux": "4.0.0",
