--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "author": "mkobierecki",
   "license": "MIT",
   "dependencies": {
+    "autosize-input": "1.0.2",
     "connected-react-router": "4.4.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
+    "react-icons": "3.2.2",
     "react-redux": "5.0.7",
     "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
