--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   "license": "MIT",
   "dependencies": {
     "connected-react-router": "4.4.1",
+    "google-auth-library": "2.0.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
+    "react-facebook-login": "4.1.1",
+    "react-facebook-login-component": "0.9.2",
     "react-redux": "5.0.7",
     "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
