--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   "license": "MIT",
   "dependencies": {
     "autosize-input": "1.0.2",
+    "axios": "0.18.0",
     "connected-react-router": "4.4.1",
     "google-auth-library": "2.0.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
-    "react-icons": "3.2.2",
     "react-facebook-login": "4.1.1",
     "react-facebook-login-component": "0.9.2",
+    "react-icons": "3.2.2",
     "react-redux": "5.0.7",
     "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
