--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
-    "react-icons": "3.2.2",
     "react-facebook-login": "4.1.1",
     "react-facebook-login-component": "0.9.2",
+    "react-icons": "3.2.2",
     "react-redux": "5.0.7",
     "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
+    "react-step-wizard": "4.4.0",
     "react-sticky": "6.0.3",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0"
