--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "remove-dist": "rimraf ./dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
     "build": "babel-node tools/build.js && npm run open:dist",
-    "test": "jest",
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
     "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
@@ -32,6 +31,7 @@
   "dependencies": {
     "autosize-input": "1.0.2",
     "axios": "0.18.0",
+    "bootstrap": "4.1.3",
     "connected-react-router": "4.4.1",
     "google-auth-library": "2.0.1",
     "object-assign": "4.1.1",
