--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm run start-message",
-    "start": "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
+    "start": "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\"",
     "open:src": "babel-node tools/srcServer.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools --color",
     "lint:watch": "npm run lint -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "rimraf ./dist",
-    "prebuild": "npm run lint && npm run test && npm run clean-dist",
+    "prebuild": "npm run clean-dist",
     "build": "babel-node tools/build.js && npm run open:dist",
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
@@ -40,12 +40,15 @@
     "react-facebook-login": "4.1.1",
     "react-facebook-login-component": "0.9.2",
     "react-icons": "3.2.2",
+    "react-infinite-scroller": "1.2.4",
     "react-redux": "5.0.7",
     "react-redux-spinner": "1.1.4",
     "react-router-dom": "4.3.1",
     "react-step-wizard": "4.4.0",
     "react-sticky": "6.0.3",
     "redux": "4.0.0",
+    "redux-infinite-scroll": "1.0.9",
+    "redux-lazy-scroll": "0.1.1",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
