--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "dependencies": {
     "autosize-input": "1.0.2",
     "axios": "0.18.0",
-    "bootstrap": "4.1.3",
+    "bootstrap": "4.2.1",
     "connected-react-router": "4.4.1",
     "google-auth-library": "2.0.1",
+    "jquery": "3.3.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
+    "react-bootstrap": "0.32.4",
     "react-dom": "16.4.2",
     "react-facebook-login": "4.1.1",
     "react-facebook-login-component": "0.9.2",
